# RADStudio12Demos

./: .gitignore  README.md
Assets/: LICENSES
Assets/RuntimeEffects Shaders/: mouse.sksl  star-nest.sksl  time.sksl
CPP/CMake/: README.md  clean.bat  make-brotli.bat  make-console.bat  make-drogon.bat  make-fmx.bat  make-googletest.bat  make-jsoncpp.bat  make-libsimdpp.bat  make-ninja.bat  make-opencv.bat  make-package.bat  make-vcl.bat  make-vtk.bat  make-zlib.bat  make.bat  setup.bat
CPP/CMake/console-demo/: CMakeLists.txt  File1.cpp  Project4.cbproj
CPP/CMake/fmx-demo/: CMakeLists.txt  Project2.cbproj  Project2.res  Unit1.cpp  Unit1.fmx  Unit1.h
CPP/CMake/package-demo/: CMakeLists.txt  Label1.cpp  Label1.h  Package1.cbproj  Package1.cpp  Package1.res
CPP/CMake/vcl-demo/: CMakeLists.txt  Project1.cbproj  Project1.res  Unit1.dfm  Unit1.h
CPP/CMake/workarounds/: libsimdpp-v2.1.diff  vtk-v9.3.1.diff
CPP/Modern CPP/: NewCppFeatures.groupproj
CPP/Modern CPP/CppConstExpr/: CppConstExpr.cbproj
CPP/Modern CPP/CppConstExprIf/: CppConstExprIf.cbproj
CPP/Modern CPP/CppGenericLambdas/: CppGenericLambdas.cbproj
CPP/Modern CPP/CppIfInit/: CppIfInit.cbproj
CPP/Modern CPP/CppInitializingLambdaCaptures/: CppInitializingLambdaCaptures.cbproj
CPP/Modern CPP/CppReturnTypeDeduction/: CppReturnTypeDeduction.cbproj
CPP/Modern CPP/CppStringView/: CppStringView.cbproj
CPP/Modern CPP/CppStructuredBindings/: CppStructuredBindings.cbproj
CPP/Multi-Device Samples/Skia4Delphi/: Skia4DelphiCpp.cbproj  Skia4DelphiCpp.cpp
CPP/RTL/HttpAsyncDownloadDemo/: HttpAsyncDownloadDemoCPP.cbproj
CPP/RTL/HttpDownload/: FDownloadDemo.fmx  HttpDownloadDemo.cbproj
CPP/RTL/SortVector/: SortVector.cbproj
CPP/VCL/ActivityIndicator/: ActivityIndicator.cbproj
CPP/VCL/Controls/: bcbsmp.cbproj  cgauges.cpp  cgauges.h  dclbcbsmp.cbproj  ibevnts.cpp  ibreg.cpp  piereg.cpp
CPP/VCL/ImageProc/: ImageProcessing.cbproj
CPP/VCL/RelativePanel/: RelativePanel.cbproj
CPP/VCL/SearchBox/: SearchBox.cbproj
CPP/VCL/Sensors/: VCLSensorsCpp.cbproj
CPP/VCL/Skia4Delphi/: Skia4DelphiCpp_VCL.cbproj  Skia4DelphiCpp_VCL.cpp
CPP/VCL/SplitView/: SplitView.cbproj
CPP/VCL/Windows 10 CRM Demo/: uDataMod.dfm  uDataMod.h
CPP/VCL/Windows 10 Notifications/: Notifications.cbproj
Object Pascal/DataSnap/FireDACJSONReflect/: DepartmentsClientProject.dproj  (+1 more)
Tools/FireUI App Preview/: LivePreview.dproj
(+778 files in other folders)
